[gd_scene load_steps=3 format=3 uid="uid://cu6lbjg8e8a73"]

[ext_resource type="Script" path="res://Objetos/win_menu.gd" id="1_mv1je"]
[ext_resource type="Texture2D" uid="uid://cqlbtjhwoydcs" path="res://art/70ebaacf-000d-4f98-9389-85de8afdaf7c.jpg" id="2_4x7yo"]

[node name="level_select_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mv1je")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="70Ebaacf-000d-4f98-9389-85De8Afdaf7c" type="Sprite2D" parent="MarginContainer"]
position = Vector2(160, 96)
scale = Vector2(0.299625, 0.32107)
texture = ExtResource("2_4x7yo")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NIVEL 1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "JUGAR"

[node name="SALIR" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SALIR"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NIVEL 1" to="." method="_on_nivel_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SALIR" to="." method="_on_salir_pressed"]
